fixed hero covering nav menu

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ h3 {
   background-color: #333;
   padding: 0 16px;
   position: relative;
+  z-index: 10;
   flex-wrap: wrap;
 }
 
@@ -640,6 +641,7 @@ footer {
   background-position: center;
   background-image: url(Images/parchment--background.jpg.avif);
   background-size: cover;
+  z-index: 1;
   max-width: 100%;
   max-height: 100%;
   justify-content: center;
